@@ -598,7 +598,7 @@ public class BlockManager {
     // not included in the numReplicas.liveReplicas() count
     assert containingLiveReplicasNodes.size() >= numReplicas.liveReplicas();
     int usableReplicas = numReplicas.liveReplicas() +
-                         numReplicas.decommissionedReplicas();
+                         numReplicas.decommissionedAndDecommissioning();
     
     if (block instanceof BlockInfoContiguous) {
       BlockCollection bc = ((BlockInfoContiguous) block).getBlockCollection();
@@ -606,17 +606,17 @@ public class BlockManager {
       out.print(fileName + ": ");
     }
     // l: == live:, d: == decommissioned c: == corrupt e: == excess
-    out.print(block + ((usableReplicas > 0)? "" : " MISSING") +
-        " (replicas:" +
-        " l: " + numReplicas.liveReplicas() +
-        " d: " + numReplicas.decommissionedReplicas() +
-        " c: " + numReplicas.corruptReplicas() +
-        " e: " + numReplicas.excessReplicas() + ") ");
+    out.print(block + ((usableReplicas > 0)? "" : " MISSING") + 
+              " (replicas:" +
+              " l: " + numReplicas.liveReplicas() +
+              " d: " + numReplicas.decommissionedAndDecommissioning() +
+              " c: " + numReplicas.corruptReplicas() +
+              " e: " + numReplicas.excessReplicas() + ") "); 
 
-    Collection<DatanodeDescriptor> corruptNodes =
-        corruptReplicas.getNodes(getBlockInfo(block));
-
-    for(DatanodeStorageInfo storage: blocksMap.storageList(block)){
+    Collection<DatanodeDescriptor> corruptNodes = 
+                                  corruptReplicas.getNodes(getBlockInfo(block));
+    
+    for (DatanodeStorageInfo storage : blocksMap.storageList(block)) {
       final DatanodeDescriptor node = storage.getDatanodeDescriptor();
       String state = "";
       if (corruptNodes != null && corruptNodes.contains(node)) {
@@ -803,7 +803,7 @@ public class BlockManager {
     // Remove block from replication queue.
     NumberReplicas replicas = countNodes(ucBlock);
     neededReplications.remove(ucBlock, replicas.liveReplicas(),
-        replicas.decommissionedReplicas(), getReplication(ucBlock));
+        replicas.decommissionedAndDecommissioning(), getReplication(ucBlock));
     pendingReplications.remove(ucBlock);
 
     // remove this block from the list of pending blocks to be deleted. 
@@ -1979,6 +1979,7 @@ public class BlockManager {
     DatanodeDescriptor srcNode = null;
     int live = 0;
     int decommissioned = 0;
+    int decommissioning = 0;
     int corrupt = 0;
     int excess = 0;
     final BlockInfoContiguous block = getBlockInfo(b);
@@ -1989,10 +1990,12 @@ public class BlockManager {
       int countableReplica = storage.getState() == State.NORMAL ? 1 : 0; 
       if ((nodesCorrupt != null) && (nodesCorrupt.contains(node))) {
         corrupt += countableReplica;
-      } else if (node.isDecommissionInProgress() || node.isDecommissioned()) {
-        decommissioned+= countableReplica;
+      } else if (node.isDecommissionInProgress()) {
+        decommissioning += countableReplica;
+      } else if (node.isDecommissioned()) {
+        decommissioned += countableReplica;
       } else if (excessReplicateMap.contains(storage, block)) {
-          excess+= countableReplica;
+        excess += countableReplica;
       } else {
         nodesContainingLiveReplicas.add(storage);
         live+= countableReplica;
@@ -2036,9 +2039,9 @@ public class BlockManager {
         srcNode = node;
       }
     }
-    if (numReplicas != null) {
-      numReplicas.initialize(live, decommissioned, corrupt, excess, 0);
-    }
+    if(numReplicas != null)
+      numReplicas.initialize(live, decommissioned, decommissioning, corrupt,
+          excess, 0);
     return srcNode;
   }
 
@@ -3335,9 +3338,8 @@ public class BlockManager {
     // handle underReplication/overReplication
     short fileReplication = bc.getBlockReplication();
     if (!isNeededReplication(storedBlock, fileReplication, numCurrentReplica)) {
-      neededReplications
-          .remove(storedBlock, numCurrentReplica, num.decommissionedReplicas(),
-              fileReplication);
+      neededReplications.remove(storedBlock, numCurrentReplica,
+          num.decommissionedAndDecommissioning(), fileReplication);
     } else {
       updateNeededReplications(storedBlock, curReplicaDelta, 0);
     }
@@ -3846,9 +3848,8 @@ public class BlockManager {
     int numCurrentReplica = num.liveReplicas();
     // add to under-replicated queue if need to be
     if (isNeededReplication(block, expectedReplication, numCurrentReplica)) {
-      if (neededReplications
-          .add(block, numCurrentReplica, num.decommissionedReplicas(),
-              expectedReplication)) {
+      if (neededReplications.add(block, numCurrentReplica, num
+          .decommissionedAndDecommissioning(), expectedReplication)) {
         return MisReplicationResult.UNDER_REPLICATED;
       }
     }
@@ -4551,6 +4552,7 @@ public class BlockManager {
   public NumberReplicas countNodes(Block b)
       throws IOException {
     int decommissioned = 0;
+    int decommissioning = 0;
     int live = 0;
     int corrupt = 0;
     int excess = 0;
@@ -4563,7 +4565,9 @@ public class BlockManager {
 
       if ((nodesCorrupt != null) && (nodesCorrupt.contains(node))) {
         corrupt++;
-      } else if (node.isDecommissionInProgress() || node.isDecommissioned()) {
+      } else if (node.isDecommissionInProgress()) {
+        decommissioning++;
+      } else if (node.isDecommissioned()) {
         decommissioned++;
       } else {
         LightWeightLinkedSet<Block> blocksExcess =
@@ -4579,7 +4583,7 @@ public class BlockManager {
         stale++;
       }
     }
-    return new NumberReplicas(live, decommissioned, corrupt, excess, stale);
+    return new NumberReplicas(live, decommissioned, decommissioning, corrupt, excess, stale);
   }
 
   /**
@@ -4778,13 +4782,13 @@ public class BlockManager {
     int curExpectedReplicas = getReplication(block);
     if (isNeededReplication(block, curExpectedReplicas, repl.liveReplicas())) {
       neededReplications.update(getBlockInfo(block), repl.liveReplicas(),
-          repl.decommissionedReplicas(), curExpectedReplicas, curReplicasDelta,
-          expectedReplicasDelta);
+          repl.decommissionedAndDecommissioning(), curExpectedReplicas, 
+          curReplicasDelta, expectedReplicasDelta);
     } else {
       int oldReplicas = repl.liveReplicas() - curReplicasDelta;
       int oldExpectedReplicas = curExpectedReplicas - expectedReplicasDelta;
       neededReplications.remove(getBlockInfo(block), oldReplicas,
-          repl.decommissionedReplicas(), oldExpectedReplicas);
+          repl.decommissionedAndDecommissioning(), oldExpectedReplicas);
     }
   }
 
@@ -4799,9 +4803,9 @@ public class BlockManager {
     final short expected = bc.getBlockReplication();
     for (Block block : bc.getBlocks()) {
       final NumberReplicas n = countNodes(block);
-      if (isNeededReplication(block, expected, n.liveReplicas())) {
+      if (isNeededReplication(block, expected, n.liveReplicas())) { 
         neededReplications.add(getBlockInfo(block), n.liveReplicas(),
-            n.decommissionedReplicas(), expected);
+            n.decommissionedAndDecommissioning(), expected);
       } else if (n.liveReplicas() > expected) {
         processOverReplicatedBlock(block, expected, null, null);
       }
@@ -5377,7 +5381,7 @@ public class BlockManager {
         if (isNeededReplication(timedOutItem, getReplication(timedOutItem),
             num.liveReplicas())) {
           neededReplications.add(getBlockInfo(timedOutItem), num.liveReplicas(),
-              num.decommissionedReplicas(), getReplication(timedOutItem));
+              num.decommissionedAndDecommissioning(), getReplication(timedOutItem));
         }
         pendingReplications.remove(timedOutItem);
         return null;
